@@ -1,5 +1,7 @@
 === HEAD
 
+* Make Database#tables with :qualify=>true option handle table names with double underscores correctly (jeremyevans) (#1241)
+
 * Add SQL::Identifier#[] and SQL::QualifiedIdentifier#[] for creating qualified identifiers (jeremyevans)
 
 * Add support for Dataset#insert_conflict :conflict_where option, for a predicate to use in ON CONFLICT clauses (chanks) (#1240)
